--- a/packages/admin-dashboard/src/locales/pl/common.json
+++ b/packages/admin-dashboard/src/locales/pl/common.json
@@ -562,6 +562,7 @@
     "public": "publiczny",
     "noteContent": "Treść uwagi:",
     "commentPlaceholder": "Wpisz tutaj swoją notatkę...",
+    "timeline": "Oś czasu",
     "entryType": {
       "CUSTOMER_REGISTERED": "Klient zarejestrowany",
       "CUSTOMER_VERIFIED": "Klient zweryfikowany",
