Add entityCustomField to another views

--- a/packages/admin-dashboard/src/locales/pl/common.json
+++ b/packages/admin-dashboard/src/locales/pl/common.json
@@ -548,6 +548,7 @@
   },
   "history": {
     "edit": "Edytuj",
+    "edited": "(edytowano)",
     "delete": "Usuń",
     "deleteNoteHeader": "Usunąć notatkę?",
     "editNoteHeader": "Edytuj notatkę",
