--- a/packages/admin-dashboard/src/locales/pl/common.json
+++ b/packages/admin-dashboard/src/locales/pl/common.json
@@ -1,4 +1,5 @@
 {
+  "Utwórz": "Utwórz {{value}}",
   "notificationsBox": {
     "toggleNotifications": "Przełącz powiadomienia",
     "notifications": "Powiadomienia",
