--- a/packages/admin-dashboard/src/locales/en/common.json
+++ b/packages/admin-dashboard/src/locales/en/common.json
@@ -1,4 +1,207 @@
 {
+  "entity": {
+    "address_zero": "Adresów",
+    "address_one": "Adres",
+    "address_few": "Adresy",
+    "address_other": "Adresów",
+    "administrator_zero": "Administratorów",
+    "administrator_one": "Administrator",
+    "administrator_few": "Administratorzy",
+    "administrator_other": "Administratorów",
+    "anonymousSession_zero": "Anonimowych sesji",
+    "anonymousSession_one": "Anonimowa sesja",
+    "anonymousSession_few": "Anonimowe sesje",
+    "anonymousSession_other": "Anonimowych sesji",
+    "asset_zero": "Zasobów",
+    "asset_one": "Zasób",
+    "asset_few": "Zasoby",
+    "asset_other": "Zasobów",
+    "authenticatedSession_zero": "Sesji",
+    "authenticatedSession_one": "Sesja",
+    "authenticatedSession_few": "Sesje",
+    "authenticatedSession_other": "Sesji",
+    "authenticationMethod_zero": "Metod uwierzytelniania",
+    "authenticationMethod_one": "Metoda uwierzytelniania",
+    "authenticationMethod_few": "Metody uwierzytelniania",
+    "authenticationMethod_other": "Metod uwierzytelniania",
+    "channel_zero": "Kanałów",
+    "channel_one": "Kanał",
+    "channel_few": "Kanały",
+    "channel_other": "Kanałów",
+    "collection_zero": "Kolekcji",
+    "collection_one": "Kolekcja",
+    "collection_few": "Kolekcje",
+    "collection_other": "Kolekcji",
+    "country_zero": "Krajów",
+    "country_one": "Kraj",
+    "country_few": "Kraje",
+    "country_other": "Krajów",
+    "customerGroup_zero": "Grup klientów",
+    "customerGroup_one": "Grupa klientów",
+    "customerGroup_few": "Grupy klientów",
+    "customerGroup_other": "Grup klientów",
+    "customerHistoryEntry_zero": "Wpisów historii klienta",
+    "customerHistoryEntry_one": "Wpis historii klienta",
+    "customerHistoryEntry_few": "Wpisy historii klienta",
+    "customerHistoryEntry_other": "Wpisów historii klienta",
+    "customer_zero": "Klientów",
+    "customer_one": "Klient",
+    "customer_few": "Klienci",
+    "customer_other": "Klientów",
+    "facetValue_zero": "Wartości faset",
+    "facetValue_one": "Wartość fasety",
+    "facetValue_few": "Wartości fasety",
+    "facetValue_other": "Wartości faset",
+    "facet_zero": "Faset",
+    "facet_one": "Faseta",
+    "facet_few": "Fasety",
+    "facet_other": "Faset",
+    "fulfillment_zero": "Realizacji",
+    "fulfillment_one": "Realizacja",
+    "fulfillment_few": "Realizacje",
+    "fulfillment_other": "Realizacji",
+    "globalSettings_zero": "Ustawień globalnych",
+    "globalSettings_one": "Ustawienie globalne",
+    "globalSettings_few": "Ustawienia globalne",
+    "globalSettings_other": "Ustawień globalnych",
+    "historyEntry_zero": "Wpisów historii",
+    "historyEntry_one": "Wpis historii",
+    "historyEntry_few": "Wpisy historii",
+    "historyEntry_other": "Wpisów historii",
+    "channelAware_zero": "Elementów kanałowych",
+    "channelAware_one": "Element kanałowy",
+    "channelAware_few": "Elementy kanałowe",
+    "channelAware_other": "Elementów kanałowych",
+    "orderHistoryEntry_zero": "Wpisów historii zamówień",
+    "orderHistoryEntry_one": "Wpis historii zamówienia",
+    "orderHistoryEntry_few": "Wpisy historii zamówień",
+    "orderHistoryEntry_other": "Wpisów historii zamówień",
+    "fulfillmentLine_zero": "Pozycji realizacji",
+    "fulfillmentLine_one": "Pozycja realizacji",
+    "fulfillmentLine_few": "Pozycje realizacji",
+    "fulfillmentLine_other": "Pozycji realizacji",
+    "orderLine_zero": "Pozycji zamówień",
+    "orderLine_one": "Pozycja zamówienia",
+    "orderLine_few": "Pozycje zamówień",
+    "orderLine_other": "Pozycji zamówień",
+    "orderModification_zero": "Modyfikacji zamówień",
+    "orderModification_one": "Modyfikacja zamówienia",
+    "orderModification_few": "Modyfikacje zamówień",
+    "orderModification_other": "Modyfikacji zamówień",
+    "order_zero": "Zamówień",
+    "order_one": "Zamówienie",
+    "order_few": "Zamówienia",
+    "order_other": "Zamówień",
+    "orderableAsset_zero": "Zamawialnych zasobów",
+    "orderableAsset_one": "Zamawialny zasób",
+    "orderableAsset_few": "Zamawialne zasoby",
+    "orderableAsset_other": "Zamawialnych zasobów",
+    "paymentMethod_zero": "Metod płatności",
+    "paymentMethod_one": "Metoda płatności",
+    "paymentMethod_few": "Metody płatności",
+    "paymentMethod_other": "Metod płatności",
+    "payment_zero": "Płatności",
+    "payment_one": "Płatność",
+    "payment_few": "Płatności",
+    "payment_other": "Płatności",
+    "productOptionGroup_zero": "Grup opcji produktu",
+    "productOptionGroup_one": "Grupa opcji produktu",
+    "productOptionGroup_few": "Grupy opcji produktu",
+    "productOptionGroup_other": "Grup opcji produktu",
+    "productOption_zero": "Opcji produktu",
+    "productOption_one": "Opcja produktu",
+    "productOption_few": "Opcje produktu",
+    "productOption_other": "Opcji produktu",
+    "productVariantPrice_zero": "Cen wariantów produktu",
+    "productVariantPrice_one": "Cena wariantu produktu",
+    "productVariantPrice_few": "Ceny wariantów produktu",
+    "productVariantPrice_other": "Cen wariantów produktu",
+    "productVariant_zero": "Wariantów produktu",
+    "productVariant_one": "Wariant produktu",
+    "productVariant_few": "Warianty produktu",
+    "productVariant_other": "Wariantów produktu",
+    "product_zero": "Produktów",
+    "product_one": "Produkt",
+    "product_few": "Produkty",
+    "product_other": "Produktów",
+    "promotion_zero": "Promocji",
+    "promotion_one": "Promocja",
+    "promotion_few": "Promocje",
+    "promotion_other": "Promocji",
+    "province_zero": "Prowincji",
+    "province_one": "Prowincja",
+    "province_few": "Prowincje",
+    "province_other": "Prowincji",
+    "refund_zero": "Zwrotów",
+    "refund_one": "Zwrot",
+    "refund_few": "Zwroty",
+    "refund_other": "Zwrotów",
+    "region_zero": "Regionów",
+    "region_one": "Region",
+    "region_few": "Regiony",
+    "region_other": "Regionów",
+    "role_zero": "Ról",
+    "role_one": "Rola",
+    "role_few": "Role",
+    "role_other": "Ról",
+    "seller_zero": "Sprzedawców",
+    "seller_one": "Sprzedawca",
+    "seller_few": "Sprzedawcy",
+    "seller_other": "Sprzedawców",
+    "session_zero": "Sesji",
+    "session_one": "Sesja",
+    "session_few": "Sesje",
+    "session_other": "Sesji",
+    "shippingLine_zero": "Pozycji dostawy",
+    "shippingLine_one": "Pozycja dostawy",
+    "shippingLine_few": "Pozycje dostawy",
+    "shippingLine_other": "Pozycji dostawy",
+    "shippingMethod_zero": "Metod dostawy",
+    "shippingMethod_one": "Metoda dostawy",
+    "shippingMethod_few": "Metody dostawy",
+    "shippingMethod_other": "Metod dostawy",
+    "stockLevel_zero": "Poziomów zapasów",
+    "stockLevel_one": "Poziom zapasów",
+    "stockLevel_few": "Poziomy zapasów",
+    "stockLevel_other": "Poziomów zapasów",
+    "stockLocation_zero": "Lokalizacji magazynowych",
+    "stockLocation_one": "Lokalizacja magazynowa",
+    "stockLocation_few": "Lokalizacje magazynowe",
+    "stockLocation_other": "Lokalizacji magazynowych",
+    "stockMovement_zero": "Ruchów magazynowych",
+    "stockMovement_one": "Ruch magazynowy",
+    "stockMovement_few": "Ruchy magazynowe",
+    "stockMovement_other": "Ruchów magazynowych",
+    "surcharge_zero": "Dopłat",
+    "surcharge_one": "Dopłata",
+    "surcharge_few": "Dopłaty",
+    "surcharge_other": "Dopłat",
+    "tag_zero": "Tagów",
+    "tag_one": "Tag",
+    "tag_few": "Tagi",
+    "tag_other": "Tagów",
+    "taxCategory_zero": "Kategorii podatkowych",
+    "taxCategory_one": "Kategoria podatkowa",
+    "taxCategory_few": "Kategorie podatkowe",
+    "taxCategory_other": "Kategorii podatkowych",
+    "taxRate_zero": "Stawek podatkowych",
+    "taxRate_one": "Stawka podatkowa",
+    "taxRate_few": "Stawki podatkowe",
+    "taxRate_other": "Stawek podatkowych",
+    "user_zero": "Użytkowników",
+    "user_one": "Użytkownik",
+    "user_few": "Użytkownicy",
+    "user_other": "Użytkowników",
+    "vendureEntity_zero": "Encji",
+    "vendureEntity_one": "Encja",
+    "vendureEntity_few": "Encje",
+    "vendureEntity_other": "Encji",
+    "zone_zero": "Stref",
+    "zone_one": "Strefa",
+    "zone_few": "Strefy",
+    "zone_other": "Stref"
+  },
+  "Utwórz": "Create {{value}}",
   "notificationsBox": {
     "toggleNotifications": "Toggle notifications",
     "notifications": "Notifications",
