our cli do not like deenruv

--- a/packages/admin-dashboard/src/locales/en/common.json
+++ b/packages/admin-dashboard/src/locales/en/common.json
@@ -4,42 +4,90 @@
     "address_one": "Adres",
     "address_few": "Adresy",
     "address_other": "Adresów",
+    "addresses_zero": "Adresów",
+    "addresses_one": "Adres",
+    "addresses_few": "Adresy",
+    "addresses_other": "Adresów",
+    "admin_zero": "Administratorów",
+    "admin_one": "Administrator",
+    "admin_few": "Administratorzy",
+    "admin_other": "Administratorów",
+    "admins_zero": "Administratorów",
+    "admins_one": "Administrator",
+    "admins_few": "Administratorzy",
+    "admins_other": "Administratorów",
     "administrator_zero": "Administratorów",
     "administrator_one": "Administrator",
     "administrator_few": "Administratorzy",
     "administrator_other": "Administratorów",
+    "administrators_zero": "Administratorów",
+    "administrators_one": "Administrator",
+    "administrators_few": "Administratorzy",
+    "administrators_other": "Administratorów",
     "anonymousSession_zero": "Anonimowych sesji",
     "anonymousSession_one": "Anonimowa sesja",
     "anonymousSession_few": "Anonimowe sesje",
     "anonymousSession_other": "Anonimowych sesji",
+    "anonymousSessions_zero": "Anonimowych sesji",
+    "anonymousSessions_one": "Anonimowa sesja",
+    "anonymousSessions_few": "Anonimowe sesje",
+    "anonymousSessions_other": "Anonimowych sesji",
     "asset_zero": "Zasobów",
     "asset_one": "Zasób",
     "asset_few": "Zasoby",
     "asset_other": "Zasobów",
+    "assets_zero": "Zasobów",
+    "assets_one": "Zasób",
+    "assets_few": "Zasoby",
+    "assets_other": "Zasobów",
     "authenticatedSession_zero": "Sesji",
     "authenticatedSession_one": "Sesja",
     "authenticatedSession_few": "Sesje",
     "authenticatedSession_other": "Sesji",
+    "authenticatedSessions_zero": "Sesji",
+    "authenticatedSessions_one": "Sesja",
+    "authenticatedSessions_few": "Sesje",
+    "authenticatedSessions_other": "Sesji",
     "authenticationMethod_zero": "Metod uwierzytelniania",
     "authenticationMethod_one": "Metoda uwierzytelniania",
     "authenticationMethod_few": "Metody uwierzytelniania",
     "authenticationMethod_other": "Metod uwierzytelniania",
+    "authenticationMethods_zero": "Metod uwierzytelniania",
+    "authenticationMethods_one": "Metoda uwierzytelniania",
+    "authenticationMethods_few": "Metody uwierzytelniania",
+    "authenticationMethods_other": "Metod uwierzytelniania",
     "channel_zero": "Kanałów",
     "channel_one": "Kanał",
     "channel_few": "Kanały",
     "channel_other": "Kanałów",
+    "channels_zero": "Kanałów",
+    "channels_one": "Kanał",
+    "channels_few": "Kanały",
+    "channels_other": "Kanałów",
     "collection_zero": "Kolekcji",
     "collection_one": "Kolekcja",
     "collection_few": "Kolekcje",
     "collection_other": "Kolekcji",
+    "collections_zero": "Kolekcji",
+    "collections_one": "Kolekcja",
+    "collections_few": "Kolekcje",
+    "collections_other": "Kolekcji",
     "country_zero": "Krajów",
     "country_one": "Kraj",
     "country_few": "Kraje",
     "country_other": "Krajów",
+    "countries_zero": "Krajów",
+    "countries_one": "Kraj",
+    "countries_few": "Kraje",
+    "countries_other": "Krajów",
     "customerGroup_zero": "Grup klientów",
     "customerGroup_one": "Grupa klientów",
     "customerGroup_few": "Grupy klientów",
     "customerGroup_other": "Grup klientów",
+    "customerGroups_zero": "Grup klientów",
+    "customerGroups_one": "Grupa klientów",
+    "customerGroups_few": "Grupy klientów",
+    "customerGroups_other": "Grup klientów",
     "customerHistoryEntry_zero": "Wpisów historii klienta",
     "customerHistoryEntry_one": "Wpis historii klienta",
     "customerHistoryEntry_few": "Wpisy historii klienta",
@@ -48,18 +96,34 @@
     "customer_one": "Klient",
     "customer_few": "Klienci",
     "customer_other": "Klientów",
+    "customers_zero": "Klientów",
+    "customers_one": "Klient",
+    "customers_few": "Klienci",
+    "customers_other": "Klientów",
     "facetValue_zero": "Wartości faset",
     "facetValue_one": "Wartość fasety",
     "facetValue_few": "Wartości fasety",
     "facetValue_other": "Wartości faset",
+    "facetValues_zero": "Wartości faset",
+    "facetValues_one": "Wartość fasety",
+    "facetValues_few": "Wartości fasety",
+    "facetValues_other": "Wartości faset",
     "facet_zero": "Faset",
     "facet_one": "Faseta",
     "facet_few": "Fasety",
     "facet_other": "Faset",
+    "facets_zero": "Faset",
+    "facets_one": "Faseta",
+    "facets_few": "Fasety",
+    "facets_other": "Faset",
     "fulfillment_zero": "Realizacji",
     "fulfillment_one": "Realizacja",
     "fulfillment_few": "Realizacje",
     "fulfillment_other": "Realizacji",
+    "fulfillments_zero": "Realizacji",
+    "fulfillments_one": "Realizacja",
+    "fulfillments_few": "Realizacje",
+    "fulfillments_other": "Realizacji",
     "globalSettings_zero": "Ustawień globalnych",
     "globalSettings_one": "Ustawienie globalne",
     "globalSettings_few": "Ustawienia globalne",
@@ -76,122 +140,242 @@
     "orderHistoryEntry_one": "Wpis historii zamówienia",
     "orderHistoryEntry_few": "Wpisy historii zamówień",
     "orderHistoryEntry_other": "Wpisów historii zamówień",
+    "orderHistoryEntries_zero": "Wpisów historii zamówień",
+    "orderHistoryEntries_one": "Wpis historii zamówienia",
+    "orderHistoryEntries_few": "Wpisy historii zamówień",
+    "orderHistoryEntries_other": "Wpisów historii zamówień",
     "fulfillmentLine_zero": "Pozycji realizacji",
     "fulfillmentLine_one": "Pozycja realizacji",
     "fulfillmentLine_few": "Pozycje realizacji",
     "fulfillmentLine_other": "Pozycji realizacji",
+    "fulfillmentLines_zero": "Pozycji realizacji",
+    "fulfillmentLines_one": "Pozycja realizacji",
+    "fulfillmentLines_few": "Pozycje realizacji",
+    "fulfillmentLines_other": "Pozycji realizacji",
     "orderLine_zero": "Pozycji zamówień",
     "orderLine_one": "Pozycja zamówienia",
     "orderLine_few": "Pozycje zamówień",
     "orderLine_other": "Pozycji zamówień",
+    "orderLines_zero": "Pozycji zamówień",
+    "orderLines_one": "Pozycja zamówienia",
+    "orderLines_few": "Pozycje zamówień",
+    "orderLines_other": "Pozycji zamówień",
     "orderModification_zero": "Modyfikacji zamówień",
     "orderModification_one": "Modyfikacja zamówienia",
     "orderModification_few": "Modyfikacje zamówień",
     "orderModification_other": "Modyfikacji zamówień",
+    "orderModifications_zero": "Modyfikacji zamówień",
+    "orderModifications_one": "Modyfikacja zamówienia",
+    "orderModifications_few": "Modyfikacje zamówień",
+    "orderModifications_other": "Modyfikacji zamówień",
     "order_zero": "Zamówień",
     "order_one": "Zamówienie",
     "order_few": "Zamówienia",
     "order_other": "Zamówień",
+    "orders_zero": "Zamówień",
+    "orders_one": "Zamówienie",
+    "orders_few": "Zamówienia",
+    "orders_other": "Zamówień",
     "orderableAsset_zero": "Zamawialnych zasobów",
     "orderableAsset_one": "Zamawialny zasób",
     "orderableAsset_few": "Zamawialne zasoby",
     "orderableAsset_other": "Zamawialnych zasobów",
+    "orderableAssest_zero": "Zamawialnych zasobów",
+    "orderableAssets_one": "Zamawialny zasób",
+    "orderableAssets_few": "Zamawialne zasoby",
+    "orderableAssets_other": "Zamawialnych zasobów",
     "paymentMethod_zero": "Metod płatności",
     "paymentMethod_one": "Metoda płatności",
     "paymentMethod_few": "Metody płatności",
     "paymentMethod_other": "Metod płatności",
+    "paymentMethods_zero": "Metod płatności",
+    "paymentMethods_one": "Metoda płatności",
+    "paymentMethods_few": "Metody płatności",
+    "paymentMethods_other": "Metod płatności",
     "payment_zero": "Płatności",
     "payment_one": "Płatność",
     "payment_few": "Płatności",
     "payment_other": "Płatności",
+    "payments_zero": "Płatności",
+    "payments_one": "Płatność",
+    "payments_few": "Płatności",
+    "payments_other": "Płatności",
     "productOptionGroup_zero": "Grup opcji produktu",
     "productOptionGroup_one": "Grupa opcji produktu",
     "productOptionGroup_few": "Grupy opcji produktu",
     "productOptionGroup_other": "Grup opcji produktu",
+    "productOptionsGroup_zero": "Grup opcji produktu",
+    "productOptionsGroup_one": "Grupa opcji produktu",
+    "productOptionsGroup_few": "Grupy opcji produktu",
+    "productOptionsGroup_other": "Grup opcji produktu",
     "productOption_zero": "Opcji produktu",
     "productOption_one": "Opcja produktu",
     "productOption_few": "Opcje produktu",
     "productOption_other": "Opcji produktu",
+    "productOptions_zero": "Opcji produktu",
+    "productOptions_one": "Opcja produktu",
+    "productOptions_few": "Opcje produktu",
+    "productOptions_other": "Opcji produktu",
     "productVariantPrice_zero": "Cen wariantów produktu",
     "productVariantPrice_one": "Cena wariantu produktu",
     "productVariantPrice_few": "Ceny wariantów produktu",
     "productVariantPrice_other": "Cen wariantów produktu",
+    "productVariantPrices_zero": "Cen wariantów produktu",
+    "productVariantPrices_one": "Cena wariantu produktu",
+    "productVariantPrices_few": "Ceny wariantów produktu",
+    "productVariantPrices_other": "Cen wariantów produktu",
     "productVariant_zero": "Wariantów produktu",
     "productVariant_one": "Wariant produktu",
     "productVariant_few": "Warianty produktu",
     "productVariant_other": "Wariantów produktu",
+    "productVariants_zero": "Wariantów produktu",
+    "productVariants_one": "Wariant produktu",
+    "productVariants_few": "Warianty produktu",
+    "productVariants_other": "Wariantów produktu",
     "product_zero": "Produktów",
     "product_one": "Produkt",
     "product_few": "Produkty",
     "product_other": "Produktów",
+    "products_zero": "Produktów",
+    "products_one": "Produkt",
+    "products_few": "Produkty",
+    "products_other": "Produktów",
     "promotion_zero": "Promocji",
     "promotion_one": "Promocja",
     "promotion_few": "Promocje",
     "promotion_other": "Promocji",
+    "promotions_zero": "Promocji",
+    "promotions_one": "Promocja",
+    "promotions_few": "Promocje",
+    "promotions_other": "Promocji",
     "province_zero": "Prowincji",
     "province_one": "Prowincja",
     "province_few": "Prowincje",
     "province_other": "Prowincji",
+    "provinces_zero": "Prowincji",
+    "provinces_one": "Prowincja",
+    "provinces_few": "Prowincje",
+    "provinces_other": "Prowincji",
     "refund_zero": "Zwrotów",
     "refund_one": "Zwrot",
     "refund_few": "Zwroty",
     "refund_other": "Zwrotów",
+    "refunds_zero": "Zwrotów",
+    "refunds_one": "Zwrot",
+    "refunds_few": "Zwroty",
+    "refunds_other": "Zwrotów",
     "region_zero": "Regionów",
     "region_one": "Region",
     "region_few": "Regiony",
     "region_other": "Regionów",
+    "regions_zero": "Regionów",
+    "regions_one": "Region",
+    "regions_few": "Regiony",
+    "regions_other": "Regionów",
     "role_zero": "Ról",
     "role_one": "Rola",
     "role_few": "Role",
     "role_other": "Ról",
+    "roles_zero": "Ról",
+    "roles_one": "Rola",
+    "roles_few": "Role",
+    "roles_other": "Ról",
     "seller_zero": "Sprzedawców",
     "seller_one": "Sprzedawca",
     "seller_few": "Sprzedawcy",
     "seller_other": "Sprzedawców",
+    "sellers_zero": "Sprzedawców",
+    "sellers_one": "Sprzedawca",
+    "sellers_few": "Sprzedawcy",
+    "sellers_other": "Sprzedawców",
     "session_zero": "Sesji",
     "session_one": "Sesja",
     "session_few": "Sesje",
     "session_other": "Sesji",
+    "sessions_zero": "Sesji",
+    "sessions_one": "Sesja",
+    "sessions_few": "Sesje",
+    "sessions_other": "Sesji",
     "shippingLine_zero": "Pozycji dostawy",
     "shippingLine_one": "Pozycja dostawy",
     "shippingLine_few": "Pozycje dostawy",
     "shippingLine_other": "Pozycji dostawy",
+    "shippingLines_zero": "Pozycji dostawy",
+    "shippingLines_one": "Pozycja dostawy",
+    "shippingLines_few": "Pozycje dostawy",
+    "shippingLines_other": "Pozycji dostawy",
     "shippingMethod_zero": "Metod dostawy",
     "shippingMethod_one": "Metoda dostawy",
     "shippingMethod_few": "Metody dostawy",
     "shippingMethod_other": "Metod dostawy",
+    "shippingMethods_zero": "Metod dostawy",
+    "shippingMethods_one": "Metoda dostawy",
+    "shippingMethods_few": "Metody dostawy",
+    "shippingMethods_other": "Metod dostawy",
     "stockLevel_zero": "Poziomów zapasów",
     "stockLevel_one": "Poziom zapasów",
     "stockLevel_few": "Poziomy zapasów",
     "stockLevel_other": "Poziomów zapasów",
+    "stockLevels_zero": "Poziomów zapasów",
+    "stockLevels_one": "Poziom zapasów",
+    "stockLevels_few": "Poziomy zapasów",
+    "stockLevels_other": "Poziomów zapasów",
     "stockLocation_zero": "Lokalizacji magazynowych",
     "stockLocation_one": "Lokalizacja magazynowa",
     "stockLocation_few": "Lokalizacje magazynowe",
     "stockLocation_other": "Lokalizacji magazynowych",
+    "stockLocations_zero": "Lokalizacji magazynowych",
+    "stockLocations_one": "Lokalizacja magazynowa",
+    "stockLocations_few": "Lokalizacje magazynowe",
+    "stockLocations_other": "Lokalizacji magazynowych",
     "stockMovement_zero": "Ruchów magazynowych",
     "stockMovement_one": "Ruch magazynowy",
     "stockMovement_few": "Ruchy magazynowe",
     "stockMovement_other": "Ruchów magazynowych",
+    "stockMovements_zero": "Ruchów magazynowych",
+    "stockMovements_one": "Ruch magazynowy",
+    "stockMovements_few": "Ruchy magazynowe",
+    "stockMovements_other": "Ruchów magazynowych",
     "surcharge_zero": "Dopłat",
     "surcharge_one": "Dopłata",
     "surcharge_few": "Dopłaty",
     "surcharge_other": "Dopłat",
+    "surcharges_zero": "Dopłat",
+    "surcharges_one": "Dopłata",
+    "surcharges_few": "Dopłaty",
+    "surcharges_other": "Dopłat",
     "tag_zero": "Tagów",
     "tag_one": "Tag",
     "tag_few": "Tagi",
     "tag_other": "Tagów",
+    "tags_zero": "Tagów",
+    "tags_one": "Tag",
+    "tags_few": "Tagi",
+    "tags_other": "Tagów",
     "taxCategory_zero": "Kategorii podatkowych",
     "taxCategory_one": "Kategoria podatkowa",
     "taxCategory_few": "Kategorie podatkowe",
     "taxCategory_other": "Kategorii podatkowych",
+    "taxCategories_zero": "Kategorii podatkowych",
+    "taxCategories_one": "Kategoria podatkowa",
+    "taxCategories_few": "Kategorie podatkowe",
+    "taxCategories_other": "Kategorii podatkowych",
     "taxRate_zero": "Stawek podatkowych",
     "taxRate_one": "Stawka podatkowa",
     "taxRate_few": "Stawki podatkowe",
     "taxRate_other": "Stawek podatkowych",
+    "taxRates_zero": "Stawek podatkowych",
+    "taxRates_one": "Stawka podatkowa",
+    "taxRates_few": "Stawki podatkowe",
+    "taxRates_other": "Stawek podatkowych",
     "user_zero": "Użytkowników",
     "user_one": "Użytkownik",
     "user_few": "Użytkownicy",
     "user_other": "Użytkowników",
+    "users_zero": "Użytkowników",
+    "users_one": "Użytkownik",
+    "users_few": "Użytkownicy",
+    "users_other": "Użytkowników",
     "vendureEntity_zero": "Encji",
     "vendureEntity_one": "Encja",
     "vendureEntity_few": "Encje",
@@ -199,7 +383,11 @@
     "zone_zero": "Stref",
     "zone_one": "Strefa",
     "zone_few": "Strefy",
-    "zone_other": "Stref"
+    "zone_other": "Stref",
+    "zones_zero": "Stref",
+    "zones_one": "Strefa",
+    "zones_few": "Strefy",
+    "zones_other": "Stref"
   },
   "Utwórz": "Create {{value}}",
   "notificationsBox": {
