--- a/plugins/dashboard-widgets-plugin/src/plugin-ui/locales/en/test.json
+++ b/plugins/dashboard-widgets-plugin/src/plugin-ui/locales/en/test.json
@@ -49,6 +49,8 @@
   "previous": "Previous",
   "netSold": "Net sold",
   "averageNetSold": "Average net sold",
+  "grossSold": "Gross sold",
+  "averageGrossSold": "Average gross sold",
   "orders": "Orders",
   "soldProducts": "Sold products",
   "compare": "Compare with previous period",
