--- a/packages/admin-dashboard/src/locales/pl/shippingMethods.json
+++ b/packages/admin-dashboard/src/locales/pl/shippingMethods.json
@@ -53,7 +53,7 @@
             "placeholder": "Wyszukiwanie produktów",
             "product": "Produkt",
             "price": "Cena",
-            "quantity": "Ilość",
+            "quantity": "Liczba",
             "total": "Razem",
             "noItems": "Dodaj produkty"
         }
